# kubectl-mount

./: .gitignore  .goreleaser.yml  Cargo.toml  Makefile  README.md  cross_build_release.sh
src/: main.rs
