[package]
name = "kubectl-mount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.65.0", default-features = false, features = ["client", "ws", "runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.17"
anyhow = "1.0.52"
serde_json = "1.0.74"
log = "0.4.14"
env_logger = "0.9.0"
structopt = "0.3"
